src/Test/Fixtures/Good/Gates/zzLetInferred.lf
let qs = ZZ(1, q0, q1);