src/Test/Fixtures/Bad/Gates/missingClosingParenInParametricGate.lf
CU3(1, 2, 3, q0, q1;